SRParser.java
// Generated from SR.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GLOBAL=1, DOUBLE=2, BODY=3, CONST=4, CREATE=5, DO=6, OD=7, FS=8, AF=9, 
		SKIP_RESERVED=10, EXIT=11, MAXLENGTH=12, LENGTH=13, RECEIVE=14, REC=15, 
		DESTROY=16, EXTERNAL=17, EXTEND=18, GETARG=19, GET=20, IMPORT=21, MOD=22, 
		NEW=23, REAL=24, PROCEDURE=25, PROCESS=26, FINAL=27, REPLY=28, NEXT=29, 
		PROC=30, READ=31, SEND=32, SPEC=33, INITIAL=34, CHAR=35, STRING=36, BOOL=37, 
		RESOURCE=38, RETURNS=39, SCANF=40, SEM=41, SPRINTF=42, INT=43, STOP=44, 
		HIGH=45, WRITES=46, WRITE=47, PRED=48, CAP=49, LOW=50, REF=51, END=52, 
		ABS=53, RES=54, VAL=55, VAR=56, NI=57, CO=58, TO=59, OPTYPE=60, OP=61, 
		OR=62, FA=63, FI=64, IF=65, LB=66, UB=67, PUT=68, TYPE=69, SUCC=70, ID=71, 
		TK_SUMA_ASIG=72, TK_MENOS_ASIG=73, TK_ASIG=74, TK_COMA=75, TK_COR_DER=76, 
		TK_COR_IZQ=77, TK_CORCHE_DER=78, TK_CORCHE_IZQ=79, TK_DISTINTO=80, TK_DOS_PUNTOS=81, 
		TK_EJECUTA=82, TK_IGUAL=83, TK_MENORQUE=84, TK_MAYORQUE=85, TK_EXPR_SINC=86, 
		TK_MULTI=87, TK_PAR_IZQ=88, TK_PAR_DER=89, TK_PUNTO_Y_COMA=90, TK_NUM=91, 
		TK_MENOS_MENOS=92, TK_MENOS=93, TK_SEPARA=94, TK_SUMA_SUMA=95, TK_SUMA=96, 
		TK_DIV=97, TK_PUNTO=98, TK_SWAP=99, TK_TRES_PUNTOS=100, TK_PORCENTAJE=101, 
		TK_AMPERSAND=102, TK_CADENA=103, ANY=104, WS=105;
	public static final int
		RULE_sr_program = 0, RULE_resources_body = 1, RULE_resource_body = 2, 
		RULE_end_optional = 3, RULE_resource_body1 = 4, RULE_resource_body11 = 5, 
		RULE_block = 6, RULE_interfaces_part = 7, RULE_interface_part = 8, RULE_body_declaration = 9, 
		RULE_body_declaration1 = 10, RULE_body_declaration11 = 11, RULE_body_body = 12, 
		RULE_global_specification = 13, RULE_global_bodies = 14, RULE_global_body = 15, 
		RULE_resource_specification = 16, RULE_resource_specification_body = 17, 
		RULE_optional_import = 18, RULE_separate_optional = 19, RULE_constant_declaration = 20, 
		RULE_import_specification = 21, RULE_operation_declaration = 22, RULE_operation_declaration1 = 23, 
		RULE_operation_type_declaration = 24, RULE_type_declaration = 25, RULE_extend_declaration = 26, 
		RULE_conditional_statement = 27, RULE_procedure_specification = 28, RULE_procedure_specification1 = 29, 
		RULE_final_declaration = 30, RULE_initial_declaration = 31, RULE_quantifier = 32, 
		RULE_cycles = 33, RULE_cycle = 34, RULE_cycle_body = 35, RULE_terms_to_terms = 36, 
		RULE_terms_to_term = 37, RULE_returns_rule = 38, RULE_procedure_reserved_word = 39, 
		RULE_operation_end = 40, RULE_operation_end1 = 41, RULE_type_specification = 42, 
		RULE_type_specification1 = 43, RULE_type_specification_op_type = 44, RULE_type_specification_op = 45, 
		RULE_type_specification_op1 = 46, RULE_type_specification_op_2 = 47, RULE_type_specification_op_21 = 48, 
		RULE_end_if = 49, RULE_end_do = 50, RULE_end_fa = 51, RULE_end_fs = 52, 
		RULE_parameter = 53, RULE_parameter_specification = 54, RULE_parameter_id = 55, 
		RULE_array = 56, RULE_expression = 57, RULE_expression1 = 58, RULE_fnp_parameter_type_1 = 59, 
		RULE_fnp_parameter_type_111 = 60, RULE_fnp_parameter_type_1111 = 61, RULE_fnp_parameter_type_11 = 62, 
		RULE_primitive_function = 63, RULE_function_one_parameter = 64, RULE_function_two_parameter = 65, 
		RULE_function_n_parameters = 66, RULE_f1p_reserved_word_type1 = 67, RULE_f1p_reserved_word_type2 = 68, 
		RULE_f1p_reserved_word_type3 = 69, RULE_f1p_parameter = 70, RULE_f2p_reserved_word = 71, 
		RULE_fnp_reserved_word_type_1 = 72, RULE_fnp_reserved_word_type_2 = 73, 
		RULE_f2p_parameter = 74, RULE_fnp_parameter_type_2 = 75, RULE_strings = 76, 
		RULE_string = 77, RULE_expression_variable = 78, RULE_statements = 79, 
		RULE_statement = 80, RULE_sequential_statement = 81, RULE_boolean_expression = 82, 
		RULE_boolean_expression1 = 83, RULE_boolean_expression11 = 84, RULE_variable_instance = 85, 
		RULE_variable_instance1 = 86, RULE_variable_instance11 = 87, RULE_array_declarations = 88, 
		RULE_array_declaration = 89, RULE_variable_declaration = 90, RULE_variable_declaration1 = 91, 
		RULE_variable_declaration111 = 92, RULE_variable_declaration11 = 93, RULE_arithmethic_expression = 94, 
		RULE_arithmethic_expressions = 95, RULE_term = 96, RULE_variable_instance2 = 97, 
		RULE_variable_instance21 = 98, RULE_op_binario = 99, RULE_op_binario_boolean = 100, 
		RULE_call_function = 101, RULE_call_function_in_function = 102, RULE_parameter_call_function = 103, 
		RULE_parameter_call_function11 = 104, RULE_parameter_call_function1 = 105, 
		RULE_semicolon_or_not = 106, RULE_ids_type_group = 107, RULE_ids_type_group1 = 108, 
		RULE_ids_group = 109, RULE_ids_group1 = 110, RULE_ids_group_dos_puntos = 111, 
		RULE_ids_group_dos_puntos11 = 112, RULE_ids_group_dos_puntos1 = 113, RULE_ids_group_dos_puntos_op_type = 114, 
		RULE_ids_group_dos_puntos_op_type1 = 115, RULE_var_type = 116, RULE_ids_group_0 = 117, 
		RULE_ids_group_01 = 118;
	private static String[] makeRuleNames() {
		return new String[] {
			"sr_program", "resources_body", "resource_body", "end_optional", "resource_body1", 
			"resource_body11", "block", "interfaces_part", "interface_part", "body_declaration", 
			"body_declaration1", "body_declaration11", "body_body", "global_specification", 
			"global_bodies", "global_body", "resource_specification", "resource_specification_body", 
			"optional_import", "separate_optional", "constant_declaration", "import_specification", 
			"operation_declaration", "operation_declaration1", "operation_type_declaration", 
			"type_declaration", "extend_declaration", "conditional_statement", "procedure_specification", 
			"procedure_specification1", "final_declaration", "initial_declaration", 
			"quantifier", "cycles", "cycle", "cycle_body", "terms_to_terms", "terms_to_term", 
			"returns_rule", "procedure_reserved_word", "operation_end", "operation_end1", 
			"type_specification", "type_specification1", "type_specification_op_type", 
			"type_specification_op", "type_specification_op1", "type_specification_op_2", 
			"type_specification_op_21", "end_if", "end_do", "end_fa", "end_fs", "parameter", 
			"parameter_specification", "parameter_id", "array", "expression", "expression1", 
			"fnp_parameter_type_1", "fnp_parameter_type_111", "fnp_parameter_type_1111", 
			"fnp_parameter_type_11", "primitive_function", "function_one_parameter", 
			"function_two_parameter", "function_n_parameters", "f1p_reserved_word_type1", 
			"f1p_reserved_word_type2", "f1p_reserved_word_type3", "f1p_parameter", 
			"f2p_reserved_word", "fnp_reserved_word_type_1", "fnp_reserved_word_type_2", 
			"f2p_parameter", "fnp_parameter_type_2", "strings", "string", "expression_variable", 
			"statements", "statement", "sequential_statement", "boolean_expression", 
			"boolean_expression1", "boolean_expression11", "variable_instance", "variable_instance1", 
			"variable_instance11", "array_declarations", "array_declaration", "variable_declaration", 
			"variable_declaration1", "variable_declaration111", "variable_declaration11", 
			"arithmethic_expression", "arithmethic_expressions", "term", "variable_instance2", 
			"variable_instance21", "op_binario", "op_binario_boolean", "call_function", 
			"call_function_in_function", "parameter_call_function", "parameter_call_function11", 
			"parameter_call_function1", "semicolon_or_not", "ids_type_group", "ids_type_group1", 
			"ids_group", "ids_group1", "ids_group_dos_puntos", "ids_group_dos_puntos11", 
			"ids_group_dos_puntos1", "ids_group_dos_puntos_op_type", "ids_group_dos_puntos_op_type1", 
			"var_type", "ids_group_0", "ids_group_01"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'global'", "'double'", "'body'", "'const '", "'create'", "'do'", 
			"'od'", "'fs'", "'af'", "'skip'", "'exit'", "'maxlength'", "'length'", 
			"'receive'", "'rec'", "'destroy'", "'external'", "'extend'", "'getarg'", 
			"'get'", "'import'", "'mod'", "'new'", "'real'", "'procedure'", "'process'", 
			"'final'", "'reply'", "'next'", "'proc'", "'read'", "'send'", "'spec'", 
			"'initial'", "'char'", "'string'", "'bool'", "'resource'", "'returns'", 
			"'scanf'", "'sem'", "'sprintf'", "'int'", "'stop'", "'high'", "'writes'", 
			"'write'", "'pred'", "'cap'", "'low'", "'ref'", "'end'", "'abs'", "'res'", 
			"'val'", "'var'", "'ni'", "'co'", "'to'", "'optype'", "'op'", "'or '", 
			"'fa'", "'fi'", "'if'", "'lb'", "'ub'", "'put'", "'type'", "'succ'", 
			null, "'+:='", "'-:='", "':='", "','", "']'", "'['", "'}'", "'{'", "'!='", 
			"':'", "'->'", "'='", "'<'", "'>'", "'?'", "'*'", "'('", "')'", "';'", 
			null, "'--'", "'-'", "'[]'", "'++'", "'+'", "'/'", "'.'", "':=:'", "'...'", 
			"'%'", "'&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GLOBAL", "DOUBLE", "BODY", "CONST", "CREATE", "DO", "OD", "FS", 
			"AF", "SKIP_RESERVED", "EXIT", "MAXLENGTH", "LENGTH", "RECEIVE", "REC", 
			"DESTROY", "EXTERNAL", "EXTEND", "GETARG", "GET", "IMPORT", "MOD", "NEW", 
			"REAL", "PROCEDURE", "PROCESS", "FINAL", "REPLY", "NEXT", "PROC", "READ", 
			"SEND", "SPEC", "INITIAL", "CHAR", "STRING", "BOOL", "RESOURCE", "RETURNS", 
			"SCANF", "SEM", "SPRINTF", "INT", "STOP", "HIGH", "WRITES", "WRITE", 
			"PRED", "CAP", "LOW", "REF", "END", "ABS", "RES", "VAL", "VAR", "NI", 
			"CO", "TO", "OPTYPE", "OP", "OR", "FA", "FI", "IF", "LB", "UB", "PUT", 
			"TYPE", "SUCC", "ID", "TK_SUMA_ASIG", "TK_MENOS_ASIG", "TK_ASIG", "TK_COMA", 
			"TK_COR_DER", "TK_COR_IZQ", "TK_CORCHE_DER", "TK_CORCHE_IZQ", "TK_DISTINTO", 
			"TK_DOS_PUNTOS", "TK_EJECUTA", "TK_IGUAL", "TK_MENORQUE", "TK_MAYORQUE", 
			"TK_EXPR_SINC", "TK_MULTI", "TK_PAR_IZQ", "TK_PAR_DER", "TK_PUNTO_Y_COMA", 
			"TK_NUM", "TK_MENOS_MENOS", "TK_MENOS", "TK_SEPARA", "TK_SUMA_SUMA", 
			"TK_SUMA", "TK_DIV", "TK_PUNTO", "TK_SWAP", "TK_TRES_PUNTOS", "TK_PORCENTAJE", 
			"TK_AMPERSAND", "TK_CADENA", "ANY", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Sr_programContext extends ParserRuleContext {
		public Resource_bodyContext resource_body() {
			return getRuleContext(Resource_bodyContext.class,0);
		}
		public Resources_bodyContext resources_body() {
			return getRuleContext(Resources_bodyContext.class,0);
		}
		public Sr_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sr_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterSr_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitSr_program(this);
		}
	}

	public final Sr_programContext sr_program() throws RecognitionException {
		Sr_programContext _localctx = new Sr_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sr_program);
		try {
			setState(244);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(238);
				resource_body();
				setState(239);
				resources_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(241);
				resources_body();
				setState(242);
				resource_body();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Resources_bodyContext extends ParserRuleContext {
		public Resource_bodyContext resource_body() {
			return getRuleContext(Resource_bodyContext.class,0);
		}
		public Resources_bodyContext resources_body() {
			return getRuleContext(Resources_bodyContext.class,0);
		}
		public Resources_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resources_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterResources_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitResources_body(this);
		}
	}

	public final Resources_bodyContext resources_body() throws RecognitionException {
		Resources_bodyContext _localctx = new Resources_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_resources_body);
		try {
			setState(250);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(246);
				resource_body();
				setState(247);
				resources_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Resource_bodyContext extends ParserRuleContext {
		public TerminalNode RESOURCE() { return getToken(SRParser.RESOURCE, 0); }
		public TerminalNode ID() { return getToken(SRParser.ID, 0); }
		public Resource_body1Context resource_body1() {
			return getRuleContext(Resource_body1Context.class,0);
		}
		public End_optionalContext end_optional() {
			return getRuleContext(End_optionalContext.class,0);
		}
		public Resource_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterResource_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitResource_body(this);
		}
	}

	public final Resource_bodyContext resource_body() throws RecognitionException {
		Resource_bodyContext _localctx = new Resource_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_resource_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(252);
			match(RESOURCE);
			setState(253);
			match(ID);
			setState(254);
			resource_body1();
			setState(255);
			end_optional();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_optionalContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(SRParser.END, 0); }
		public End_optionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_optional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).enterEnd_optional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SRListener ) ((SRListener)listener).exitEnd_optional(this);
		}
	}

	public final End_optionalContext end_optional() throws RecognitionException {
		End_optionalContext _localctx = new End_optionalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_end_optional);
		try {
			setState(259);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case END:
				enterOuterAlt(_localctx, 1);
				{
				setState(257);
				match(END);
				}
				break;
			case EOF:
			case RESOURCE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
